package algoblocks.engine;

public class LowerPencilAction extends Action {
    public void execute(Player player) {
        player.lowerPencil();
    }
}