package algoblocks.engine;

public class RaisePencilAction extends Action {
    public void execute(Player player){
        player.raisePencil();
    }
}